# odat

./: .gitignore  LICENSE  README.md  pip_packaging.py  setup.cfg  setup.py
odat/: __init__.py  defaults.py  util.py
odat/mdat/: conveyor_belts_01.py  freesounds.py  iatis.py  kgl.py  local_kgl.py  phone_digits.py  phone_digits_block.py  sa.py  ss.py  vacuum.py  xe.py
odat/snippets/: cmudict.py
odat/tests/: test_functional_dacc.py
odat/utils/: chunkers.py  functional_dacc.py  spectro.py
