[metadata]
name = odat
version = 0.0.8
url = https://github.com/otosense/odat
packages = 
		odat
		odat.utils
		odat.mdat
include_package_data = True
platforms = any
description_file = README.md
root_url = https://github.com/otosense
description = Getting sound/vibration data simply
author = Otosense
author_email = thor@otosense.com
license = MIT
description-file = README.md
long-description = file: README.md
long_description_content_type = text/markdown
keywords = 
		data
		data access
		data preperation
		machine learning
		artificial intelligence
copyright = 2020, Otosense
display_name = odat

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires = 
	matplotlib
	py2store
	slang
	soundfile
	scikit-learn
	pandas
	importlib_resources

