[metadata]
name = odat
version = 0.0.9
url = https://github.com/i2mint/odat
platforms = any
description_file = README.md
root_url = https://github.com/i2mint
description = Getting sound/vibration data simply
license = MIT
description-file = README.md
long-description = file: README.md
long_description_content_type = text/markdown
keywords = 
		data
		data access
		data preperation
		machine learning
		artificial intelligence
display_name = odat

[options]
packages = 
		odat
		odat.utils
		odat.mdat
include_package_data = True
zip_safe = False